@@ -1,5 +1,5 @@
 Package: mirt
-Version: 0.9.5
+Version: 0.9.6
 Date: 2013-08-30
 Type: Package
 Title: Multidimensional Item Response Theory
