@@ -30,6 +30,16 @@ test_that('poly', {
     expect_true(mirt:::closeEnough(cfs - c(1.090,  4.248,  2.550, -1.507,  1.090,  2.817,  0.853, -2.198,  2.269,  
                         5.176,  2.173, -1.978,  1.121,  3.357,  0.987, -1.714,  0.000,  1.000),
                  -1e-2, 1e-2))    
+    newmodel <- mirt.model('F = 1-4
+                           CONSTRAIN = (1-2,a1)
+                           PRIOR = (1, d1, norm, 0, 1)')
+    modp3 <- mirt(Science, newmodel, verbose=FALSE)
+    expect_is(modp3, 'ConfirmatoryClass')
+    cfs <- as.numeric(do.call(c, coef(modp3, verbose = FALSE)))
+    expect_true(mirt:::closeEnough(cfs - c(1.090,  4.248,  2.550, -1.507,  1.090,  2.817,  0.853, -2.198,  2.269,  
+                                           5.176,  2.173, -1.978,  1.121,  3.357,  0.987, -1.714,  0.000,  1.000),
+                                   -1e-2, 1e-2))
+    
     modp4 <- suppressMessages(mirt(Science, 1, itemtype = c(rep('graded',3), 'nominal'), verbose=FALSE))
     expect_is(modp4, 'ConfirmatoryClass')
     cfs <- as.numeric(do.call(c, coef(modp4, verbose = FALSE, digits=4)))
